--- a/basics.tex
+++ b/basics.tex
@@ -1609,7 +1609,7 @@ And now of course we had better check that this condition properly characterizes
 Let $S\subseteq \R$.  Then, $S$ is closed and bounded iff it is quasicompact.
 \begin{savenotes}
 \begin{rmk}
-This result fails to generalize at all.  It will not even hold in $T_2$ topological spaces in which the notion of boundedness makes sense.
+This is equally true in $\R ^d$, but fails to hold in general topological spaces (for one thing, ``boundedness'' does not make sense in arbitrary topological spaces).  It will not even hold in $T_2$ topological spaces in which the notion of boundedness makes sense.
 \end{rmk}
 \begin{proof}\footnote{Proof adapted from \cite[pg.~87--89]{Abbott}.}
 $(\Rightarrow )$
